# todolist-server

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  init.sql  rust-toolchain.toml  volo.yml
.sqlx/: query-00e0fdfd12371668d310fa48f4d21c849b01b04da9f50288e326bc5008793ec0.json  query-025624dd7c53e01e0874c15411c13ec18782c4d74e469b7cc954cf407befba21.json  query-120ff0444168583022f57f4ecb157cb87ecc912c6adf0630b340f2dd17c21a75.json  query-1261b612282c8299cd17e9c250c972ed958e52ad5915932ce0cac5d2ac03d532.json  query-1a82cac5cfa26b3da3319625dee80f5288f0fedc42bcb507859a4fffcccce017.json  query-1eda1d37d17e03bb1bfdad48522d71cc2fc943c15313958fb535fe43d644378f.json  query-5a19e290a91575d1f58369b494d0a539fa469f4570c165f02ba93b55171c8da9.json  query-7180b3b2d01406b414a83bd5fe6af0dc3f475fc7f159515c3307f92a829d1381.json  query-81953e6a3767f212bcb760ed14f40d37daf44f5ca4f71964003db73c210b564f.json  query-9d9fc212b004f09c43ca5d3ed31995a0d6cad4be3f278d72dd7b0e5e6ca9e7da.json
idl/: include.thrift  model.thrift  task.thrift  user.thrift
src/: client.rs  http_server.rs  lib.rs  rpc_server.rs  server.rs  util.rs
src/client/: router.rs
src/client/router/: error.rs  jwt.rs  task.rs  user.rs
src/http_server/: model.rs  router.rs
src/http_server/router/: error.rs  jwt.rs  task.rs  user.rs
src/rpc_server/: db.rs  handler.rs
src/rpc_server/db/: error.rs  model.rs
src/server/: db.rs  layer.rs
volo-gen/: volo.yml
