[package]
name = "todolist_server"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo-gen = { path = "./volo-gen" }
volo.workspace = true
volo-thrift.workspace = true
pilota.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "mysql", "time"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
dotenv = "0.15"
chrono = "0.4.31"
once_cell = "1.18.0"
thiserror = "1.0.49"
time = "0.3.29"
axum = { version="0.6.20", features = ["headers"] }
axum-extra = { version="0.8.0" }
jsonwebtoken = "8.3.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"


[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[workspace]
members = ["volo-gen"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "*"
volo-build = "*"
volo-thrift = "*"
pilota = "*"

anyhow = "1"
async-trait = "0.1"
tokio = "1"
